kubernetes/applications/vaultwarden/vaultwarden-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-server
  namespace: networking
  labels:
    app: vaultwarden-server
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden-server
  template:
    metadata:
      labels:
        app: vaultwarden-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: vaultwarden-engine
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: vaultwarden-persistent-config
              mountPath: /data
      volumes:
        - name: vaultwarden-persistent-config
          persistentVolumeClaim:
            claimName: vaultwarden-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-loadbalancer-service
  namespace: networking
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.50.243"
spec:
  type: LoadBalancer
  selector:
    app: vaultwarden-server
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: networking
  annotations:
    # Essential for Homepage Auto-Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Vaultwarden"
    gethomepage.dev/group: "Security"
    gethomepage.dev/icon: "vaultwarden"
    gethomepage.dev/href: "https://vault.${DOMAIN_NAME}"
    gethomepage.dev/pod-selector: "app=vaultwarden-server"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: vault.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-loadbalancer-service
                port:
                  number: 80
